--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .lineUpDancersButton{
   padding:5px 12px;
   float:right;
+  background-color: #777;
+  margin:0 2px;
+
 }
 .topbar{
   height:32px;
@@ -24,4 +27,24 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+.spinnyDancer {
+  position: relative;
+  border:10px solid green;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: circleDancer 1.7s infinite ease;
+}
+@-webkit-keyframes circleDancer {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 }
