Update animations and asset images

--- a/styles.css
+++ b/styles.css
@@ -24,20 +24,26 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
+
+  position:absolute;
+}
+
+.blinkyDancer{
   border:10px solid red;
   border-radius:10px;
-  position:absolute;
 }
 
 .spinnyDancer {
   position: relative;
   border:10px solid green;
+  height:20px;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
-  -webkit-animation: circleDancer 1.7s infinite ease;
+  -webkit-animation: spinnyDancer 1.7s infinite;
 }
-@-webkit-keyframes circleDancer {
+
+@-webkit-keyframes spinnyDancer {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
@@ -47,4 +53,26 @@ body, a:link, a:visited, a:active{
     transform: rotate(360deg);
   }
 }
+
+.circleDancer { 
+  width:100px; 
+  height:100px; 
+  transform-origin:100% center; 
+  position:absolute; 
+  -webkit-animation: circleDancer 2s linear infinite; 
+}
+
+.circleDancer:before { 
+  content:''; 
+  position:absolute; 
+  height:100%; 
+  width:100%; 
+  background:orange; 
+  -webkit-animation: circleDancer 3s linear reverse infinite; 
+}
+
+@-webkit-keyframes circleDancer { 
+  100% { 
+    transform:rotate(-360deg); 
+  } 
 }
