--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -25,18 +27,17 @@ body, a:link, a:visited, a:active{
 }
 .dancer{
 
-  position:absolute;
 }
 
 .blinkyDancer{
   border:10px solid red;
   border-radius:10px;
+  position:fixed;
 }
 
 .spinnyDancer {
+  height: 25%;
   position: relative;
-  border:10px solid green;
-  height:20px;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
@@ -55,24 +56,19 @@ body, a:link, a:visited, a:active{
 }
 
 .circleDancer { 
-  width:100px; 
-  height:100px; 
-  transform-origin:100% center; 
+  width:300px; 
+  height:300px; 
+  
   position:absolute; 
-  -webkit-animation: circleDancer 2s linear infinite; 
+  -webkit-animation: circleDancer 5s linear infinite; 
+  animation: circleDancer 5s linear infinite; 
+  
 }
 
-.circleDancer:before { 
-  content:''; 
-  position:absolute; 
-  height:100%; 
-  width:100%; 
-  background:orange; 
-  -webkit-animation: circleDancer 3s linear reverse infinite; 
-}
 
 @-webkit-keyframes circleDancer { 
-  100% { 
-    transform:rotate(-360deg); 
-  } 
+  from {  -webkit-transform: rotate(0deg) translateX(50px) rotate(0deg); }
+  to   {  -webkit-transform: rotate(360deg) translateX(50px) rotate(-360deg); }
 }
+
+
