--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,32 @@ body{
   font-size: 18px;
   background-size: 100%;
   background-repeat: no-repeat;
+  background-image: url(assets/market-street-bg.jpg);
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .lineUpDancersButton{
+
+.container {
+  height: 100vh;
+  width: 100vw;
+}
+
+.title, .addDancerButton, .lineUpDancersButton, .countrifyButton {
   padding:5px 12px;
   float:right;
   background-color: #777;
   margin:0 2px;
-
 }
+
+.marketStreet {
+  background-image: url(assets/market-street-bg.jpg);
+}
+
+.danceHall {
+  background-image: url(assets/danceHall.jpg);
+}
+
 .topbar{
   height:32px;
   background-color: #555;
@@ -26,49 +41,73 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-
+  transition: top 2s, left 2s;
 }
 
-.blinkyDancer{
+.randomDancer{
   border:10px solid red;
   border-radius:10px;
   position:fixed;
 }
 
 .spinnyDancer {
-  height: 25%;
-  position: relative;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: spinnyDancer 1.7s infinite;
+  height: 240px;
+  position: absolute;
+  -webkit-animation: shark 1.7s infinite alternate;
 }
 
-@-webkit-keyframes spinnyDancer {
+@-webkit-keyframes shark {
   0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+    -webkit-transform: translate(40px,40px);
+    transform: translate(40px,40px)
   }
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    -webkit-transform: translate(-40px,40px);
+    transform: translate(-40px,40px);
   }
 }
 
+
 .circleDancer { 
-  width:300px; 
-  height:300px; 
-  
+  width:240px; 
+  height:240px; 
   position:absolute; 
+}
+
+.circleDancer {
   -webkit-animation: circleDancer 5s linear infinite; 
   animation: circleDancer 5s linear infinite; 
-  
 }
 
 
 @-webkit-keyframes circleDancer { 
-  from {  -webkit-transform: rotate(0deg) translateX(50px) rotate(0deg); }
-  to   {  -webkit-transform: rotate(360deg) translateX(50px) rotate(-360deg); }
+  0% {  -webkit-transform: rotate(0deg) translate(50px) rotate(0deg); }
+  100%   {  -webkit-transform: rotate(360deg) translate(50px) rotate(-360deg); }
 }
 
+.pair {
+  position: absolute;
+  -webkit-animation: countrify 7s linear infinite;
 
+}
+
+@-webkit-keyframes countrify { 
+  0%   {-webkit-transform: rotate(0deg) translate(25px) rotate(0deg); }
+  12%  {-webkit-transform: rotate(60deg) translate(25px) rotate(-60deg);}
+  24%  {-webkit-transform: rotate(60deg) translate(25px) rotate(-60deg);}
+  37%  {-webkit-transform: rotate(-60deg) translate(-25px) rotate(60deg);}
+  49%  {-webkit-transform: rotate(60deg) translate(25px) rotate(-60deg);}
+  61%  {-webkit-transform: rotate(60deg) translate(25px) rotate(-60deg); }
+  74%  {-webkit-transform: rotate(-60deg) translate(-25px) rotate(60deg);}
+  86%  {-webkit-transform: rotate(60deg) translate(25px) rotate(-60deg);}
+  100% {-webkit-transform: rotate(60deg) translate(25px) rotate(-60deg); }
+}
+
+.circleDancer:hover, .spinnyDancer:hover {
+  -webkit-animation: specialSpin 1s ease 1;
+}
+
+@-webkit-keyframes specialSpin { 
+  0% {  -webkit-transform: rotate(0deg); }
+  100%   {  -webkit-transform: rotate(360deg); }
+}
