--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,11 @@ body, a:link, a:visited, a:active{
   height: 80px;
   width: 80px;
 }
+
+.sad-face {
+  position: relative;
+  left: 80px;
+  top: -20px;
+  height: 90px;
+  width: 90px;
+}
